<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/main_background">

        <RelativeLayout
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/whitebg"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/opensans"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="127dp"
                android:layout_height="116dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="110dp"
                android:layout_marginBottom="23dp"
                android:src="@drawable/rico1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/josefinsans"
                android:gravity="center"
                android:text="@string/desc_rico"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="441dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/darkbg"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/opensans"
                android:gravity="center"
                android:text="Interest"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="42dp"
                android:fontFamily="@font/josefinsans"
                android:text="@string/hobi"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="29dp"
                android:layout_height="43dp"
                android:layout_marginTop="31dp"
                android:src="@drawable/iconhobby"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="92dp"
                android:fontFamily="@font/josefinsans"
                android:text="@string/makes"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="29dp"
                android:layout_height="43dp"
                android:layout_marginTop="82dp"
                android:src="@drawable/iconmakes"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="139dp"
                android:fontFamily="@font/josefinsans"
                android:text="@string/mikes"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="29dp"
                android:layout_height="43dp"
                android:layout_marginTop="131dp"
                android:src="@drawable/iconmikes"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="187dp"
                android:fontFamily="@font/josefinsans"
                android:text="@string/interest"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="29dp"
                android:layout_height="43dp"
                android:layout_marginTop="179dp"
                android:src="@drawable/iconinterests"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="235dp"
                android:fontFamily="@font/josefinsans"
                android:text="@string/cita"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="29dp"
                android:layout_height="43dp"
                android:layout_marginTop="231dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/icondream"/>

        </RelativeLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>